[gd_scene load_steps=2 format=3 uid="uid://ua73pd60mipx"]

[ext_resource type="Script" path="res://Scripts/result_canvas.gd" id="1_aokoe"]

[node name="Result_canvas" type="CanvasLayer"]
visible = false
script = ExtResource("1_aokoe")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.564706)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -89.0
offset_bottom = 491.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 375

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 500
theme_override_constants/margin_right = 500

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Orb_label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "0 Orbs"

[node name="Deaths_label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "0 Deaths"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Your_score" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Your Score:"
horizontal_alignment = 1

[node name="Score_label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "0
"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 399

[node name="Continue_button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Continue"

[node name="Retry_button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Retry"

[node name="Quit_button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quit"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Continue_button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Retry_button" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Quit_button" to="." method="_on_quit_button_pressed"]
